ElectionPrograms overflow fix

--- a/app/stylesheets/_general.sass
+++ b/app/stylesheets/_general.sass
@@ -4,6 +4,8 @@ body
 	background-color: $orange
 	color: $white
 	background: $orange
+	&.ReactModal__Body--open
+		overflow: hidden
 footer
 	padding: 40px 0 20px 0
 @include media-breakpoint-down(sm)
